--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/gapi": "^0.0.47",
     "@types/node": "^20.11.14",
-    "dot-env": "^0.0.1",
-    "google-auth-library": "^9.6.0",
-    "googleapis": "^131.0.0",
+    "axios": "^1.6.7",
+    "gapi-script": "^1.2.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.3",
     "react-social-icons": "^6.7.0"
   },
   "devDependencies": {
