--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@types/gapi": "^0.0.47",
     "@types/node": "^20.11.14",
     "axios": "^1.6.7",
     "flickr-sdk": "^7.0.0-beta.7",
     "gapi-script": "^1.2.0",
-    "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
