--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
+    "@react-hook/window-size": "^3.1.1",
     "@types/gapi": "^0.0.47",
     "@types/node": "^20.11.14",
     "axios": "^1.6.7",
@@ -18,6 +19,7 @@
     "gapi-script": "^1.2.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
