--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-social-icons": "^6.7.0"
+    "react-social-icons": "^6.7.0",
+    "vercel": "^33.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
